traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:15: error: not found: value ecritMesage
        ecritMesage(num)
        ^